github/github.h

 
/**
 * Default response structure returned for each call to the API. Contains the
 * API response, the response code, response size, any error code, and message
 * if applicable.
 */
typedef struct {
    char *resp;
    char *err_msg;
    size_t size;
    uint16_t resp_code;

    // pagination fields
    char first_link[GH_MAX_URL_LEN];
    char next_link[GH_MAX_URL_LEN];
    char prev_link[GH_MAX_URL_LEN];
    char last_link[GH_MAX_URL_LEN];

    // rate limit information
    gh_client_rate_limit_data_t *rate_limit_data;
} gh_client_response_t;
/**
 * Structure used to pass pagination settings.
 */
typedef struct {
    unsigned int per_page;
    char *page_url;
} gh_client_req_list_opts_t;
/**
 * Initialize the library.
 */
int
gh_client_init(const char *token);
/**
 * Set verbose mode for curl.
 */
void
gh_client_set_verbose(int verbose);
/**
 * Free the memory used in the client response.
 */
void
gh_client_set_user_agent(const char *ua);
/**
 * Free the memory used in the client response.
 */
void
gh_client_response_free(gh_client_response_t *res);
/**
 * Retrieve a list of releases for the given repository. The response memory
 * needs to be freed by the caller. 
 */
gh_client_response_t*
gh_client_repo_releases_list(const char *owner, const char *repo,
                             const gh_client_req_list_opts_t *opts);
/**
 * Retrieve the latest release for the given repository. The response memory
 * needs to be freed by the caller. 
 */
gh_client_response_t*
gh_client_repo_releases_latest(const char *owner, const char *repo);
/**
 * Retrieve a release by the given tag. The response memory needs to be freed
 * by the caller. 
 */
gh_client_response_t*
gh_client_repo_release_by_tag(const char *owner, const char *repo,
                              const char *tag);
/**
 * Retrieve a release by the given id. The response memory needs to be freed by
 * the caller. 
 */
gh_client_response_t*
gh_client_repo_release_by_id(const char *owner, const char *repo,
                             const unsigned int id);
/**
 * Create a new release for the given repository and configuration. The
 * response memory needs to be freed by the caller.
 */
gh_client_response_t*
gh_client_repo_release_create(const char *owner, const char *repo,
                              const char *data);
/**
 * Update a release for the given repository and configuration. The response
 * memory needs to be freed by the caller.
 * 
 * data argument must be JSON in the following format:
 * 
 * {"tag_name":"v1.0.0","target_commitish":"master","name":"v1.0.0",
 *  "body":"Description of the release","draft":false,"prerelease":false}
 */
gh_client_response_t*
gh_client_repo_release_update(const char *owner, const char *repo,
                              const unsigned int id, const char *data);
/**
 * Delete a release for the given repository and configuration. The response
 * memory needs to be freed by the caller.
 */
gh_client_response_t*
gh_client_repo_release_delete(const char *owner, const char *repo,
                              const unsigned int id);
/**
 * Generate release notes content for a release. The response memory needs to
 * be freed by the caller.
 * 
 * data argument must be JSON in the following format:
 * 
 * tag_name (required)
 * 
 * {"tag_name":"v1.0.0","target_commitish":"main","previous_tag_name":"v0.9.2",
 *  "configuration_file_path":".github/custom_release_config.yml"}
 */
gh_client_response_t*
gh_client_repo_release_gen_notes(const char *owner, const char *repo,
                                 const char *data);
/**
 * List the assets on a release with the given. The response memory needs to be
 * freed by the caller.
 */
gh_client_response_t*
gh_client_repo_release_assets_list(const char *owner, const char *repo,
                                   const unsigned int id,
                                   const gh_client_req_list_opts_t *opts);
/**
 * Retrieve a release asset for th given id. The response memory needs to be
 * freed by the caller.
 */
gh_client_response_t*
gh_client_repo_release_asset_get(const char *owner, const char *repo,
                                  const unsigned int id);
/**
 * Free the memory used by the client.
 */
void
gh_client_free();